调整编译策略，引用文件修改需要重新编译全部文件

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>X-UI Demo</title>
-    <link rel="stylesheet" href="../xui.min.css">
+    <link rel="stylesheet" href="../xui.css">
   </head>
   <body>
     <div class="main">
@@ -17,6 +17,9 @@
             <h6>H6. X-UI Font Heading</h6>
           </li>
         </ul>
+      </div>
+      <div class="demo-button">
+        <button class="xui-btn xui-primary">xui-btn</button>
       </div>
     </div>
   </body>
